--- a/resume.html
+++ b/resume.html
@@ -14,6 +14,7 @@ RESUME BHANVI
 <li>Diploma (cse) </li>
 </ul>
 <ol>
+  <label>Projects </label>
 <li> Home Automation System </li>
 <li> College Website </li>
 <li> Prediction system for Bank Customers</li>
