--- a/resume.html
+++ b/resume.html
@@ -6,22 +6,22 @@ RESUME BHANVI
 </head>
 <body>
 <h1> My Resume </h1>
-<label> Bhanvi </Label>
+<label><b> Bhanvi</b> </Label>
 <p> I'm a Engineering Student and pursuing my B.tech from <br> Govt. Engineering College, Nilokheri. I have interes in DevOps and More in Cloud Computing</p>
-<label> Education </label>
+<label> <b>Education </b></label>
 <ul>
 <li> B.tech (cse)</li>
 <li>Diploma (cse) </li>
 </ul>
+<label><b>Projects</b></label>
 <ol>
-  <label>Projects </label>
 <li> Home Automation System </li>
 <li> College Website </li>
 <li> Prediction system for Bank Customers</li>
 <li> Recommendation System </li>
 <li> Project Approval System</li>
 </ol>
-<label> Bio </label>
+<label> <b>Bio</b> </label>
 <p> Father's name:- Sh. Ashok Kumar</p>
 <p> Mother's name:- Smt. Mona Makan</p>
 </body>
